<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_address"
            android:background="@drawable/selector_btn_previous"
            style="@style/input_text_style"
            android:maxLength="100"
            android:layout_marginBottom="@dimen/standard_margin"/>
        <EditText
            android:id="@+id/et_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_street"
            android:background="@drawable/selector_btn_previous"
            style="@style/input_text_style"
            android:layout_marginBottom="@dimen/standard_margin"/>
        <EditText
            android:id="@+id/extra_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_extra_address"
            style="@style/input_text_style"
            android:background="@drawable/selector_btn_previous"
            android:layout_marginBottom="@dimen/standard_margin"/>
        <EditText
            android:id="@+id/et_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_state"
            style="@style/input_text_style"
            android:background="@drawable/selector_btn_previous"
            android:layout_marginBottom="@dimen/standard_margin"/>
        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_city"
            style="@style/input_text_style"
            android:background="@drawable/selector_btn_previous"
            android:layout_marginBottom="@dimen/standard_margin"/>
        <EditText
            android:id="@+id/et_postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_postal_code"
            android:inputType="number"
            style="@style/input_text_style"
            android:background="@drawable/selector_btn_previous"
          />
</LinearLayout>