<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2806.Main2806.ProfileContract.ProfileActivity"
    android:layoutDirection="rtl">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_singers"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_vertical"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title_jobs"
                    style="@style/title_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight=".8"
                    android:gravity="center"
                    android:text="@string/title_profle" />

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:padding="@dimen/standard_margin"
                    android:src="@drawable/ic_arrow_back" />

            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/standard_margin_X2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/standard_margin_X2">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:padding="@dimen/standard_margin"
                android:src="@mipmap/ic_logo_2806" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_profile"
                android:background="@color/white"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>



        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:background="@drawable/selector_input_profile"
            android:hint="@string/et_name"
            android:padding="@dimen/standard_margin"
            style="@style/input_text_style"/>

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:background="@drawable/selector_input_profile"
            android:hint="@string/et_last_name"
            style="@style/input_text_style"
            android:padding="@dimen/standard_margin" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:background="@drawable/selector_input_profile"
            android:hint="@string/et_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="@dimen/standard_margin" />

        <AutoCompleteTextView
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_input_profile"
            android:completionHint="@string/city"
            android:completionThreshold="1"
            android:hint="@string/et_address"
            android:padding="@dimen/standard_margin"
            style="@style/input_text_style"
            android:maxLength="100"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_main_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".7"
                android:padding="@dimen/standard_margin"
                android:text="@string/gender" />
            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3">

                <RadioButton
                    android:id="@+id/rb_man"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:drawableEnd="@drawable/ic_male"
                    android:text="@string/male"
                    android:padding="@dimen/standard_margin"/>

                <RadioButton

                    android:id="@+id/rb_woman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:drawableEnd="@drawable/ic_female"
                    android:text="@string/female"
                    android:padding="@dimen/standard_margin"/>

            </RadioGroup>



        </LinearLayout>

    </LinearLayout>


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin_X2"
        android:layout_gravity="bottom|center"
        android:background="@drawable/selector_btn_confirm_main"
        android:text="@string/btn_confirm"
        android:textAppearance="@style/btn_next_style"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>