<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_margin"
            android:background="@drawable/selector_btn_previous"
            android:drawableLeft="@drawable/ic_phone"
            android:hint="@string/et_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="@dimen/standard_margin" />


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/selector_btn_next"
            android:text="@string/bt_confirm_phone"
            android:textAppearance="@style/btn_next_style"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

        <TextView
            android:id="@+id/tv_logout_desc"
            style="@style/tv_less_large_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:gravity="right"
            android:text="@string/log_out_toast"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_sign_out"
            style="@style/tv_less_large_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:gravity="right"
            android:text="@string/et_logout"
            android:textSize="@dimen/normal_font_size"
            android:visibility="invisible" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>