<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="rtl">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_date"
            android:gravity="start"
            android:padding="@dimen/standard_margin_X2"
            android:drawableEnd="@drawable/ic_drop_down"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tv_less_large_style"
            android:layout_margin="@dimen/standard_margin"
            tools:text="@string/tv_problem_type"
            android:gravity="right"
            />
        <Button
            android:id="@+id/btn_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_time"
            android:gravity="start"
            android:padding="@dimen/standard_margin_X2"
            android:drawableEnd="@drawable/ic_drop_down"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tv_less_large_style"
            android:layout_margin="@dimen/standard_margin"
            tools:text="@string/tv_problem_type"
            android:gravity="right"
            />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>