<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tv_large_style"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/et_select_problem"
            android:gravity="right"/>
        <Spinner
            android:id="@+id/spinner_problem_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_margin_X2"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tv_large_style"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/tv_problem_type"
            android:gravity="right"
            />
        <Spinner
            android:id="@+id/spinner_problem_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_margin_X2"
            style="@style/AppTheme.PopupOverlay"/>
        <EditText
            android:id="@+id/problem_desc"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/tv_problem_dec"
            android:gravity="start"
            android:background="@drawable/selector_btn_previous"
            android:padding="@dimen/standard_margin"
            android:maxLines="3"
            android:maxLength="200"
            android:layout_marginBottom="@dimen/standard_margin"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>